# ChangeLog for net-im/ktp-call-ui
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/ktp-call-ui/ChangeLog,v 1.24 2014/04/26 11:05:32 johu Exp $

  26 Apr 2014; Johannes Huber <johu@gentoo.org> -ktp-call-ui-0.7.1.ebuild:
  Remove KDE Telepathy 0.7.1.

*ktp-call-ui-0.8.1 (26 Apr 2014)

  26 Apr 2014; Johannes Huber <johu@gentoo.org> +ktp-call-ui-0.8.1.ebuild:
  Version bump KDE Telepathy 0.8.1.

  12 Mar 2014; Johannes Huber <johu@gentoo.org> -ktp-call-ui-0.6.3.ebuild:
  Remove KDE Telepathy 0.6.3.

*ktp-call-ui-0.8.0 (12 Mar 2014)

  12 Mar 2014; Johannes Huber <johu@gentoo.org> +ktp-call-ui-0.8.0.ebuild:
  Version bump KDE Telepathy 0.8.0.

  13 Feb 2014; Johannes Huber <johu@gentoo.org> -ktp-call-ui-0.7.0.ebuild:
  Remove KDE Telepathy 0.7.0.

*ktp-call-ui-0.7.1 (18 Jan 2014)

  18 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +ktp-call-ui-0.7.1.ebuild:
  Version bump.

  29 Oct 2013; Johannes Huber <johu@gentoo.org> -ktp-call-ui-0.6.2.ebuild:
  Remove KDE Telepathy 0.6.2.

*ktp-call-ui-0.7.0 (29 Oct 2013)

  29 Oct 2013; Johannes Huber <johu@gentoo.org> +ktp-call-ui-0.7.0.ebuild:
  Version bump KDE Telepathy 0.7.0.

  14 Sep 2013; Johannes Huber <johu@gentoo.org> -ktp-call-ui-0.6.1.ebuild:
  Remove KDE Telepathy 0.6.1.

*ktp-call-ui-0.6.3 (14 Sep 2013)

  14 Sep 2013; Johannes Huber <johu@gentoo.org> +ktp-call-ui-0.6.3.ebuild:
  Version bump KDE Telepathy 0.6.3.

  21 May 2013; Johannes Huber <johu@gentoo.org> -ktp-call-ui-0.6.0.ebuild:
  Remove KDE Telepathy 0.6.0.

*ktp-call-ui-0.6.2 (21 May 2013)

  21 May 2013; Johannes Huber <johu@gentoo.org> +ktp-call-ui-0.6.2.ebuild:
  Version bump KDE Telepathy 0.6.2.

  20 Apr 2013; Johannes Huber <johu@gentoo.org> -ktp-call-ui-0.5.3.ebuild:
  Remove KDE Telepathy 0.5.3.

*ktp-call-ui-0.6.1 (20 Apr 2013)

  20 Apr 2013; Johannes Huber <johu@gentoo.org> +ktp-call-ui-0.6.1.ebuild:
  Version bump KDE Telepathy 0.6.1.
