@@ -1,6 +1,11 @@
 # ChangeLog for net-im/ktp-call-ui
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/ktp-call-ui/ChangeLog,v 1.24 2014/04/26 11:05:32 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ktp-call-ui/ChangeLog,v 1.25 2014/07/29 18:17:53 johu Exp $
+
+  29 Jul 2014; Johannes Huber <johu@gentoo.org> ktp-call-ui-0.8.0.ebuild,
+  ktp-call-ui-0.8.1.ebuild:
+  Restrict DEPEND to <media-libs/qt-gstreamer-1.0.0, bug #518508. Support for
+  new api fixed in upstream git master, which will hit 0.9.0 release.
 
   26 Apr 2014; Johannes Huber <johu@gentoo.org> -ktp-call-ui-0.7.1.ebuild:
   Remove KDE Telepathy 0.7.1.
